--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "preflect-ads-test",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "svelte-kit build",
+		"dev": "svelte-kit dev",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package"
